frontend/tests/cases/positive/noninterf.gr
fooa : Int [Private] → Int [Public]
fooa [_] = [42]
            -- x : Unused but Public * Unused = Unused and Unusused <= Private
            -- i.e. cannot leak
