frontend/tests/cases/negative/levelPromotionWrongSpec.gr
fooa : Int [Private] -> Int [Public]
fooa [x] = [(weak x) + 0]
            -- x : Private but Public * Private = Public
            -- i.e. cannot leak
